--- a/EcommerceWeb/Views/Category/Index.cshtml
+++ b/EcommerceWeb/Views/Category/Index.cshtml
@@ -7,7 +7,9 @@
 			<h2>Category List</h2>
 		</div>
 		<div class="col-6 text-end">
-			<a class="btn btn-primary" asp-controller="" asp-area=""><i class="bi bi-plus-circle"></i> Create New Category</a>
+			<a class="btn btn-primary" asp-controller="Category" asp-action="Create">
+				<i class="bi bi-plus-circle"></i> Create New Category
+			</a>
 		</div>
 	</div>
 	<table class="table table-bordered table-striped">
