--- a/EcommerceWeb/Views/Shared/_Layout.cshtml
+++ b/EcommerceWeb/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer bg-primary text-muted">
         <div class="container text-center">
-            Made with <i class="bi bi-heart-fill"></i> by Talaat Ramadan.
+            Made with <i class="bi bi-heart-fill"></i> by Talaat Ramadan
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
