--- a/EcommerceWeb/Views/Category/Edit.cshtml
+++ b/EcommerceWeb/Views/Category/Edit.cshtml
@@ -4,10 +4,10 @@
 	ViewData["Title"] = "Category Form";
 }
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Edit">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2>Create Category</h2>
+			<h2>Edit Category</h2>
 			<hr />
 		</div>
 		@* <div asp-validation-summary="ModelOnly"></div> *@
@@ -25,7 +25,7 @@
 		</div>
 		<div class="row">
 			<div class="col-6 col-md-3">
-				<button class="btn btn-primary form-control" type="submit">Create</button>
+				<button class="btn btn-primary form-control" type="submit">Save</button>
 			</div>
 			<div class="col-6 col-md-3">
 				<a class="btn btn-secondary border form-control" asp-controller="Category" asp-action="Index">Back To List</a>
