Get and Post Action and View Page for Delete Category

--- a/EcommerceWeb/Views/Category/Edit.cshtml
+++ b/EcommerceWeb/Views/Category/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Category
 
 @{
-	ViewData["Title"] = "Category Form";
+	ViewData["Title"] = "Edit Category";
 }
 
 <form method="post" asp-action="Edit">
