Use TempData to Show Notifications

--- a/EcommerceWeb/Views/Category/Index.cshtml
+++ b/EcommerceWeb/Views/Category/Index.cshtml
@@ -4,6 +4,11 @@
 	ViewData["Title"] = "Categories";
 }
 
+@if (TempData["success"] is not null)
+{
+	<h2>@TempData["success"]</h2>
+}
+
 <div class="container">
 	<div class="row pt-4 pb-3">
 		<div class="col-6">
