Create _Notification partial view

--- a/EcommerceWeb/Views/Category/Index.cshtml
+++ b/EcommerceWeb/Views/Category/Index.cshtml
@@ -4,10 +4,7 @@
 	ViewData["Title"] = "Categories";
 }
 
-@if (TempData["success"] is not null)
-{
-	<h2>@TempData["success"]</h2>
-}
+<partial name="_Notification" />
 
 <div class="container">
 	<div class="row pt-4 pb-3">
