--- a/EcommerceWeb/Views/Shared/_Layout.cshtml
+++ b/EcommerceWeb/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                                 <li class="nav-link">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 </li>
+                                <li class="nav-link">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                                </li>
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
