--- a/EcommerceWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,19 +1,20 @@
 ﻿@model ProductViewModel
 
 @{
-	ViewData["Title"] = "Create Product";
+	ViewData["Title"] = @Model.Product.Id != 0 ? "Edit Product" : "Create Product";
 }
 
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Create Product</h2>
+                <h2 class="text-white py-2">@(Model.Product.Id != 0 ? "Edit" : "Create") Product</h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
+            <input asp-for="Product.Id" hidden />
             <div class="border p-3">
                 @*<div asp-validation-summary="ModelOnly"></div>*@
                 <div class="form-floating py-2 col-12">
@@ -69,9 +70,18 @@
                 </div>
 
                 <div class="row pt-2">
-                    <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
-                    </div>
+                    @if (Model.Product.Id > 0)
+                    {
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-6 col-md-3">
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+                        </div>
+                    }
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary border  form-control">
                             Back to List
