--- a/EcommerceWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/EcommerceWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using EcommerceWeb.Areas.Identity
 @using EcommerceWeb.Areas.Identity.Pages
+@using Ecommerce.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
