--- a/EcommerceWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="row mb-3 pb-3">
                 <div class="col-md-2 offset-md-1">
-                    <a asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue Shopping</small></a>
+                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Continue Shopping</small></a>
                 </div>
                 <div class="col-md-10 offset-md-1">
                     @foreach (var item in Model.ShoppingCartList)
@@ -33,12 +33,12 @@
                             </div>
                             <div class="col-12 col-lg-6 pt-md-3">
                                 <h5 class="text-uppercase text-secondary"><strong>@item.Product.Title</strong></h5>
-                                <p><small>@item.Product.Description</small></p>
+                                <p><small>@Html.Raw(item.Product.Description)</small></p>
                             </div>
                             <div class="col-12  col-lg-5 text-center row">
                                 <div class="col-3 text-md-right pt-2 pt-md-4">
                                     <h6 class="fw-semibold">
-                                        @item.Product.ListPrice
+                                        @item.Price.ToString("c")
                                         <span class="text-muted">&nbsp;x&nbsp;</span>@item.Count
                                     </h6>
                                 </div>
@@ -69,7 +69,7 @@
                         <ul class="list-group mb-4">
                             <li class="d-flex justify-content-between align-items-center">
                                 <h5 class="text-dark fw-semibold text-uppercase"> Total (USD)</h5>
-                                <h4 class="text-dark fw-bolder">@Model.OrderTotal$</h4>
+                                <h4 class="text-dark fw-bolder">@Model.OrderTotal.ToString("c")</h4>
                             </li>
                         </ul>
                     </div>
