Update Order Details

--- a/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -5,6 +5,7 @@
 }
 
 <form method="post">
+    <input asp-for="OrderHeader.Id" hidden />
     <br />
     <div class="container">
         <div class="card">
@@ -195,7 +196,7 @@
                             </div>
                             @if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
                             {
-                                <input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+                                <button type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1">Update Order Details </button>
                             }
 
                         </div>
