--- a/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OrderViewModel
 
 @{
-        ViewData["Title"] = "Order Details";
+    ViewData["Title"] = "Order Details";
 }
 
 <form method="post">
@@ -35,7 +35,7 @@
                                     {
                                         <input asp-for="OrderHeader.Name" type="text" class="form-control" />
                                         <span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
-                                    } 
+                                    }
                                     else
                                     {
                                         <input asp-for="OrderHeader.Name" readonly type="text" class="form-control" />
@@ -235,10 +235,28 @@
                                     </div>
                                 </li>
                             </ul>
-                            <input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
-                            <input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
-                            <input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+                            @if (Model.OrderHeader.PaymentStatus == StaticDetails.PaymentStatusDelayedPayment &&
+                            Model.OrderHeader.OrderStatus == StaticDetails.StatusShipped)
+                            {
+                                <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
+                            }
+                            @if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+                            {
+                                if (Model.OrderHeader.OrderStatus == StaticDetails.StatusApproved)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control my-1">Start Processing</button>
+                                }
+                                if (Model.OrderHeader.OrderStatus == StaticDetails.StatusInProcess)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control my-1">Ship Order</button>
+                                }
+                                if (Model.OrderHeader.OrderStatus != StaticDetails.StatusRefunded &&
+                                Model.OrderHeader.OrderStatus != StaticDetails.StatusCancelled &&
+                                Model.OrderHeader.OrderStatus != StaticDetails.StatusShipped)
+                                {
+                                    <button type="submit" class="btn btn-danger form-control my-1">Cancel Order</button>
+                                }
+                            }
                         </div>
                     </div>
                 </div>
