--- a/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/EcommerceWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -238,7 +238,7 @@
                             @if (Model.OrderHeader.PaymentStatus == StaticDetails.PaymentStatusDelayedPayment &&
                             Model.OrderHeader.OrderStatus == StaticDetails.StatusShipped)
                             {
-                                <button type="submit" class="btn btn-success form-control my-1">Pay Now</button>
+                                <button type="submit" asp-action="Details" class="btn btn-success form-control my-1">Pay Now</button>
                             }
                             @if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
                             {
