--- a/EcommerceWeb/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/EcommerceWeb/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -1,5 +1,9 @@
 ﻿@model int
 
+@{
+    ViewData["Title"] = "Order Confirmation";
+}
+
 <div class="container row pt-4">
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Order Placed Successfully!</h1>
