--- a/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EcommerceWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -55,12 +55,12 @@
                         <label asp-for="Input.StreetAddress" class="ms-2 text-muted">Street Address</label>
                         <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
                     </div>
-                     <div class="form-floating mb-3 col-md-6">
+                    <div class="form-floating mb-3 col-md-6">
                         <input asp-for="Input.City" class="form-control" placeholder="City" />
                         <label asp-for="Input.City" class="ms-2 text-muted">City</label>
                         <span asp-validation-for="Input.City" class="text-danger"></span>
                     </div>
-                     <div class="form-floating mb-3 col-md-6">
+                    <div class="form-floating mb-3 col-md-6">
                         <input asp-for="Input.State" class="form-control" placeholder="State" />
                         <label asp-for="Input.State" class="ms-2 text-muted">State</label>
                         <span asp-validation-for="Input.State" class="text-danger"></span>
@@ -70,17 +70,20 @@
                         <label asp-for="Input.PostalCode" class="ms-2 text-muted">Postal Code</label>
                         <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3 col-md-6">
-                        <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
-                            <option disabled selected>-Select Role-</option>
-                        </select>
-                    </div>
-                    <div class="form-floating mb-3 col-md-6">
-                        <select asp-for="Input.CompanyId" style="display: none;
-" asp-items="@Model.Input.CompanyList" class="form-select">
-                            <option disabled selected>-Select Company-</option>
-                        </select>
-                    </div>
+                    @if (User.IsInRole(StaticDetails.Role_Admin))
+                    {
+                        <div class="form-floating mb-3 col-md-6">
+                            <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
+                                <option disabled selected>-Select Role-</option>
+                            </select>
+                        </div>
+                        <div class="form-floating mb-3 col-md-6">
+                            <select asp-for="Input.CompanyId" style="display: none;
+    " asp-items="@Model.Input.CompanyList" class="form-select">
+                                <option disabled selected>-Select Company-</option>
+                            </select>
+                        </div>
+                    }
                     <div class="col-12">
                         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
                     </div>
@@ -133,7 +136,7 @@
     <script>
         $(document).ready(function () {
             $('#Input_Role').change(function () {
-                var selection = $('#Input_Role Option:Selected').text(); 
+                var selection = $('#Input_Role Option:Selected').text();
                 if (selection == 'Company') {
                     $('#Input_CompanyId').show();
                 } else {
